css/style.css
/* https://picsum.photos/200/300 */

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: sans-serif;
}

#page-container {
    width: 100vw;
    height: 100vh;
    position: relative;
}

#schermata-video {
    height: 90%;
    position: relative;
    background-color: black
}

.top-setting {
    display: flex;
    justify-content: flex-end;
    gap: 5px;

    padding: 3px;
}

a:link {
    text-decoration: none;
}

a:visited {
    color: white;
}

.didascalie {
    font-weight: 600;
    font-size: 0.7em;
    color: white;
}

.modifica-vista, .allarga-schermo {
    background-color: rgb(74, 74, 74);
    border-radius: 5px;
    padding: 2px 5px;
    line-height: 2em;
}

.contenitore-video {
    width: 90%;
    height: 90%;

    display: flex;
    flex-wrap: wrap;
    gap: 3px;

    overflow-y: auto;

    position: absolute;
    top: 8%;
    left: 5%;

}

.card-video {
    position: relative;
    width: calc(100% / 7 - 3px);
    height: calc(100% / 5 - 3px);
    min-width: 100px;
}

.card-video img {
    width: 100%;
    height: 100%;
    background-size: cover;
}

.didascalie.username {
    position: absolute;
    bottom: 0;
    left: 0;
    background-color: rgb(74, 74, 74, 0.7);
    padding: 5px;
}




/* barra in basso */

#barra-comandi {
    height: 10%;
    display: flex;
    justify-content: space-between;

    background-color:rgb(34, 34, 34);
}

.links {
    display: flex;
    justify-content: space-between;
    align-items: center;
    color: white;
    padding: 15px 0;
    gap: 20px;
}

.links.sinistra {
    padding-left: 15px;
}

.links.destra {
    height: 100%;
    background-color: rgb(74, 74, 74);
}

#barra-comandi .links {
    list-style-type: none;
}

.icona-nome {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 5px;
}

.icone {
    font-size: 1.6em;
}

.icone.special {
    color: rgb(14, 240, 14);
}

.links.destra li .end-call {
    color: red;
    padding: 0 10px;
}

